# MLhigh

./: .gitignore  AXIS_REBUILD_AND_BAR_ALIGNMENT_v19.md  CONTINUE_STATS_CLASSIC_CHARTS_v16.md  CONTINUE_STATS_CLASSIC_CHARTS_v17.md  FIX_RESULT_CHARTS_v27.md  LICENSE  README.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v10.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v11.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v12.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v13.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v14.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v15.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v2.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v3.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v5.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v6.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v7.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v8.md  REFRACTOR_TO_ZHONG_STYLE_MLHIGH_v9.md  RENDER_NO_FAIL_AND_TOP_TABS_v18.md  pyproject.toml  requirements.txt  run.py
app/: config.py  main.py  schemas.py
app/services/: chart_service.py  export_service.py  io_service.py  ml_service.py  report_service.py  sample_service.py  stats_service.py  table_service.py  variable_service.py
app/static/: index.html  styles.css
data/examples/: bayesian_example.csv  cluster_example.csv  counterfactual_example.csv  dim_reduction_example.csv  doubly_robust_aipw_example.csv  feature_engineering_example.csv  gee_example.csv  latin_square_example.csv  ldsc_example.csv  marginal_structural_model_example.csv  markov_model_example.csv  mediation_example.csv  meta_analysis_example.csv  (+21 more)
docs/: EXTENSION.md  INTEGRATION.md
tests/: browser_acceptance.py  smoke.py
(+16 files in other folders)
