[project]
name = "mlhigh"
version = "1.0.0"
description = "Clinical Advanced Statistics & Machine Learning One-Click Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.27.0",
    "xgboost>=2.0.0",
]
